# poker_assistant

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/poker_assistant/: __init__.py
src/poker_assistant/compute/: __init__.py  _native_equity.cpp  card_encoding.py  equity_protocol.py
src/poker_assistant/core/: logger.py
src/poker_assistant/domain/: __init__.py  cards.py
src/poker_assistant/domain/board/: __init__.py  texture.py
src/poker_assistant/domain/hand/: __init__.py  evaluator.py
src/poker_assistant/domain/ranges/: __init__.py  models.py  parser.py  presets.py
tests/: conftest.py
tests/unit/: test_core_logger.py  test_package.py
tests/unit/compute/: test_card_encoding.py  test_equity_protocol.py
tests/unit/domain/: test_cards.py
tests/unit/domain/board/: test_texture.py
tests/unit/domain/hand/: test_evaluator.py
tests/unit/domain/ranges/: test_models.py  test_parser.py  test_presets.py
tools/: fix_compile_commands.py
