[project]
name = "poker_assistant"
version = "0.1.0"
description = "Live poker assistant with screen overlay: vision, game state, decision."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "poker_assistant maintainers" },
]
keywords = ["poker", "computer-vision", "decision-engine", "overlay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.1",
    "opencv-python>=4.10",
]

[project.urls]
Repository = "https://github.com/sa1vador77/poker_assistant"

[project.scripts]
# CLI entry-points are wired here once the cli package exposes them.
# Example: pa-vision-inspect = "poker_assistant.cli.vision_inspect:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

# --------------------------------------------------------------------------- #
# Build backend.
# --------------------------------------------------------------------------- #

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Pure-Python sources live under src/poker_assistant/. The whole package
# tree (including any subdirectories like _resources/) is included in the
# wheel; scikit-build-core walks the listed package directory recursively.
wheel.packages = ["src/poker_assistant"]

# CMake build configuration. The actual Release-mode flags are set inside
# CMakeLists.txt; we pin the minimum CMake version here so that
# scikit-build-core fails fast on old systems with a clear message.
cmake.version = ">=3.20"
cmake.build-type = "Release"

# --------------------------------------------------------------------------- #
# uv.
# --------------------------------------------------------------------------- #

[tool.uv]
# Treat the project itself as an editable dependency of the dev environment,
# so `uv sync` makes `import poker_assistant` work from tests and tools.
package = true

# --------------------------------------------------------------------------- #
# Ruff: linter + formatter.
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "PL",   # pylint
    "TRY",  # tryceratops
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "PLR0913",
    "TRY003",
    # TC001/TC002/TC003 push runtime-cheap typing imports into TYPE_CHECKING
    # blocks. We accept that micro-optimisation only when it actually saves
    # something (heavy imports, real cycles); for stdlib types like
    # `collections.abc.Collection` it adds noise without benefit.
    "TC001",
    "TC002",
    "TC003",
    # __post_init__ runs automatically and is not part of the public API:
    # the invariants it enforces belong in the class-level docstring.
    "D105",
    # PLR2004 forbids any literal in comparisons. We name domain constants
    # (HOLE_CARDS_PER_HAND, MAX_BOARD_CARDS) but accept literal token-length
    # checks in the range parser, where naming them (PAIR_TOKEN_LENGTH = 2,
    # SHAPED_TOKEN_LENGTH = 3) obscures rather than clarifies.
    "PLR2004",
    # PLR0911 (return count) and PLR0912 (branch count) both cap the
    # complexity of a single function. Some domain algorithms (poker
    # hand classification, board texture taxonomy, command dispatchers)
    # are naturally expressed as a flat cascade of guarded returns
    # ordered by priority. Splitting them into helpers obscures the
    # priority order without reducing real complexity, so we accept
    # both caps are wrong for this codebase.
    "PLR0911",
    "PLR0912",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "PLR2004"]
"tools/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# --------------------------------------------------------------------------- #
# Mypy: strict static typing.
# --------------------------------------------------------------------------- #

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "possibly-undefined",
]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["cv2.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# Pytest.
# --------------------------------------------------------------------------- #

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
xfail_strict = true
markers = [
    "integration: end-to-end tests that touch real images and templates",
]

[tool.coverage.run]
branch = true
source = ["poker_assistant"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
